<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_channelname">LoadApp</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>

    <string name="button_name">Click me</string>
    <string name="button_label">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="downloadOptionGlide">Glide - Image Loading Library by BumpTech</string>
    <string name="downloadOptionProject">LoadApp - Current repository by Udacity</string>
    <string name="downloadOptionRetrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="details_ok_button_label">OK</string>
    <string name="details_status_label">Status:</string>
    <string name="details_filename_label">File name:</string>
    <string name="downloadResultTextError">Fail</string>
    <string name="downloadResultTextOK">Success</string>
    <string name="permissionGrantedInfotext">Permission was not granted!</string>
    <string name="select_option_error_message">Please select the file to download</string>
    <string name="clouddownloadimage_content_description">CloudDownload-Image</string>
</resources>
